@@ -70,6 +70,10 @@
 			<RegExp input="$$1" output="&lt;genre&gt;\1&lt;/genre&gt;" dest="5+">
 				<expression repeat="yes">&lt;a href='/genrelist.php/.*?&gt;([^&lt;]*)&lt;/a&gt;</expression>
 			</RegExp>
+			<!-- Set -->
+			<RegExp input="$$1" output="&lt;set&gt;\1&lt;/set&gt;" dest="5+">
+				<expression trim="1">Filmreihe:&lt;/div&gt;.*?&lt;div class=&quot;content&quot;&gt;(.*?) - &lt;a</expression>
+			</RegExp>
 			<!-- Tagline -->
 			<RegExp input="$$1" output="&lt;tagline&gt;\1&lt;/tagline&gt;" dest="5+">
 				<expression trim="1">class=&quot;long_name&quot;&gt;([^&lt;]*)&lt;/p&gt;</expression>
